# simple-deployment-manager

./: Cargo.toml  LICENSE  README.md  Taskfile  example.toml
.github/workflows/: release.yml
src/: config.rs  guards.rs  main.rs
