[package]
name = "sidem"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
